--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 html,body{width:100%;height:100%;font-family:'Archivo',sans-serif;background:linear-gradient(135deg,#0d0e1a,#1a1c2d);overflow:hidden;transition:background 1s ease;perspective:1200px}
 body.dark{background:#000}
 .main{height:100dvh;display:flex;flex-direction:column;opacity:0;animation:fadeIn 1.5s ease forwards}
-.grid{flex:1;display:grid;gap:1.2vw;padding:2vw;grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr}
+.grid{flex:1;display:grid;gap:1vw;padding:1.5vw;grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr}
 @media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr);grid-template-rows:1fr}}
 .block{display:flex;justify-content:center;align-items:center;text-align:center;border-radius:20px;font-weight:bold;font-size:clamp(1.2rem,2vw,1.5rem);color:white;background-size:cover;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;position:relative;padding:10px;min-height:0}
 .block-content{position:absolute;inset:0;display:flex;justify-content:center;align-items:center;padding:10px;text-align:center;word-break:break-word}
@@ -48,30 +48,47 @@ body.dark{background:#000}
 
 <script>
 const $=id=>document.getElementById(id),
-nombres=[
-["Fluye"],
-["Crea"],
-["Siente"],
-["Vibra"]
-],
-colores=["bg1","bg2","bg3","bg4"],
 libros=[
-{portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1642726660i/60171734.jpg",fondo:"#140038",frases:["🌬️ Respira profundamente y permite que la calma invada cada rincón de tu ser."]},
-{portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1602574232i/55539565.jpg",fondo:"#001a33",frases:["🔍 Explora caminos desconocidos que expandan tu conciencia y te inspiren."]},
-{portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1662270336i/62237986.jpg",fondo:"#33001a",frases:["🧠 Crea espacios de magia donde cada idea sea un mundo posible."]},
-{portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1546097703i/76865.jpg",fondo:"#003300",frases:["💓 Vibra en sintonía con la energía más pura del universo que habita en ti."]},
-{portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1544822311i/43163538.jpg",fondo:"#333300",frases:["✨ Fluye como el río que avanza sin esfuerzo hacia su destino de grandeza."]}
+{
+  palabras:["Fluye","Respira","Deja","Acepta"],
+  frases:["🌬️ Deja que la vida te lleve hacia lugares inesperados.","🧘‍♂️ Respira profundamente y renueva tu energía.","🌊 Fluye como el agua, sin resistencia.","🤲 Acepta lo que llega y aprende de ello."],
+  portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1642726660i/60171734.jpg",
+  fondo:"#140038"
+},
+{
+  palabras:["Explora","Descubre","Observa","Curiosea"],
+  frases:["🔍 Explora caminos que aún no has recorrido.","🧭 Descubre mundos escondidos en tu interior.","👁️ Observa cada detalle como si fuera nuevo.","🤔 Curiosea, pregunta y transforma tu realidad."],
+  portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1602574232i/55539565.jpg",
+  fondo:"#001a33"
+},
+{
+  palabras:["Crea","Imagina","Construye","Diseña"],
+  frases:["🎨 Crea universos que sólo tú puedes soñar.","💡 Imagina lo imposible y hazlo realidad.","🏗️ Construye puentes hacia tus sueños.","🛠️ Diseña la vida que siempre has querido."],
+  portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1662270336i/62237986.jpg",
+  fondo:"#33001a"
+},
+{
+  palabras:["Vibra","Conecta","Siente","Ama"],
+  frases:["💓 Vibra alto y contagia tu energía.","🔗 Conecta profundamente contigo mismo.","💖 Siente el pulso del universo dentro de ti.","❤️ Ama sin condiciones, empieza por ti."],
+  portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1546097703i/76865.jpg",
+  fondo:"#003300"
+}
 ];
 let libroActual,bloquePortada,revelado=false;
 
 function iniciarJuego(){
   const grid=$("gridContainer"),logo=$("logoTriggui");
-  grid.innerHTML="",libroActual=libros[Math.floor(Math.random()*libros.length)],bloquePortada=Math.floor(Math.random()*4),revelado=false,logo.classList.remove("hidden");
-  nombres.forEach((opciones,i)=>{
+  grid.innerHTML="";
+  libroActual=libros[Math.floor(Math.random()*libros.length)];
+  bloquePortada=Math.floor(Math.random()*4);
+  revelado=false;
+  logo.classList.remove("hidden");
+
+  libroActual.palabras.forEach((palabra,i)=>{
     const div=document.createElement("div");
-    div.className=`block ${colores[i]}`;
+    div.className=`block bg${i+1}`;
     div.id="bloque"+i;
-    div.innerHTML=`<div class="block-content label">${opciones[0]}</div><div class="block-content accionable hidden" id="bloque${i}Text">${libroActual.frases[i]}</div>`;
+    div.innerHTML=`<div class="block-content label">${palabra}</div><div class="block-content accionable hidden" id="bloque${i}Text">${libroActual.frases[i]}</div>`;
     div.onclick=()=>manejarClick(i);
     grid.appendChild(div);
   });
@@ -84,7 +101,7 @@ function manejarClick(i){
 }
 
 function revelarTodo(){
-  nombres.forEach((_,i)=>{
+  libroActual.palabras.forEach((_,i)=>{
     const block=$("bloque"+i);
     if(i===bloquePortada){
       block.innerHTML="";
@@ -108,7 +125,7 @@ function revelarTodo(){
   revelado=true;
 }
 
-$("shockBtn").onclick=()=>{$("shockBtn").classList.add("hidden");$("mensajeFinal").classList.remove("hidden")};
+$("shockBtn").onclick=()=>{ $("shockBtn").classList.add("hidden"); $("mensajeFinal").classList.remove("hidden"); };
 
 iniciarJuego();
 </script>
