--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@ body.dark{background:#000}
   <div class="grid" id="gridContainer"></div>
   <div class="footer">
     <button class="shock hidden" id="shockBtn">📖 ¡Chócalas si abriste un libro físico!</button>
-    <div class="final-message hidden" id="mensajeFinal">📚 Cada página que tocas, despierta tu alma. ✨</div>
+    <div class="final-message hidden" id="mensajeFinal">✨ Cada página física es un puente hacia tu mejor versión. 📚</div>
     <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui">
   </div>
 </div>
@@ -50,26 +50,26 @@ body.dark{background:#000}
 const $=id=>document.getElementById(id),
 libros=[
 {
-  palabras:["Fluye","Respira","Deja","Acepta"],
-  frases:["🌬️ Deja que la historia te lleve sin resistencia.","🧘‍♂️ Respira entre las páginas abiertas.","🌊 Fluye con la imaginación del autor.","🤲 Acepta las lecciones escritas en papel."],
+  palabras:["Adaptabilidad","Resiliencia","Curiosidad","Crecimiento"],
+  frases:["🌊 Aprende a adaptarte a cualquier entorno en segundos.","🛡️ Fortalece tu mente en cada desafío real.","🔍 Encuentra oportunidades donde otros ven obstáculos.","🚀 Construye una mentalidad que siempre evoluciona."],
   portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1642726660i/60171734.jpg",
   fondo:"#140038"
 },
 {
-  palabras:["Explora","Descubre","Observa","Imagina"],
-  frases:["🔍 Explora cada rincón del libro como un viajero curioso.","🧭 Descubre un nuevo mundo entre tus manos.","👁️ Observa los detalles que sólo un libro físico revela.","💡 Imagina más allá de cada página que hojeas."],
+  palabras:["Preguntar","Pensar","Renovar","Dudar"],
+  frases:["🤔 Cuestiona lo que otros aceptan sin pensar.","🧠 Reconfigura tu forma de analizar problemas.","♻️ Renueva creencias limitantes con pensamiento crítico.","❓ Usa la duda como catalizador para innovar."],
   portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1602574232i/55539565.jpg",
   fondo:"#001a33"
 },
 {
-  palabras:["Crea","Construye","Diseña","Inventa"],
-  frases:["🎨 Crea nuevas realidades desde las palabras impresas.","🏗️ Construye tus sueños hoja por hoja.","🛠️ Diseña tu universo interior leyendo.","💡 Inventa caminos que solo existen en el papel."],
+  palabras:["Construir","Crear","Reinventar","Manifestar"],
+  frases:["🛠️ Levanta proyectos concretos con propósito.","🎨 Expresa tus ideas en realidades palpables.","🧬 Reinventa procesos estancados para crecer.","🌟 Manifiesta tu visión de vida paso a paso."],
   portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1662270336i/62237986.jpg",
   fondo:"#33001a"
 },
 {
-  palabras:["Vibra","Conecta","Siente","Abraza"],
-  frases:["💓 Vibra con cada palabra escrita.","🔗 Conecta tu corazón a cada historia.","💖 Siente el aroma y textura de un libro vivo.","🤲 Abraza la experiencia tangible de leer físicamente."],
+  palabras:["Disciplina","Estrategia","Visión","Liderazgo"],
+  frases:["🎯 Domina pequeños hábitos que te llevan lejos.","📊 Planifica tus movimientos como un maestro.","🔭 Piensa a largo plazo como los grandes constructores.","👑 Lidera proyectos desde tu autenticidad interior."],
   portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1546097703i/76865.jpg",
   fondo:"#003300"
 }
