--- a/public/index.html
+++ b/public/index.html
@@ -10,20 +10,20 @@
 html,body{width:100%;height:100%;font-family:'Archivo',sans-serif;background:linear-gradient(135deg,#0d0e1a,#1a1c2d);overflow:hidden;transition:background 1s ease;perspective:1200px}
 body.dark{background:#000}
 .main{height:100dvh;display:flex;flex-direction:column;opacity:0;animation:fadeIn 1.5s ease forwards}
-.header-message{font-size:clamp(0.9rem,1.5vw,1.2rem);color:#fff;opacity:0.7;padding:1vh;text-align:center}
-.grid{flex:1;display:grid;gap:1vw;padding:1vw;grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr}
-@media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr);grid-template-rows:1fr}}
-.block{display:flex;justify-content:center;align-items:center;text-align:center;border-radius:20px;font-weight:bold;font-size:clamp(1.2rem,2vw,1.5rem);color:white;background-size:cover;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;position:relative;padding:10px}
+.header-message{font-size:clamp(1rem,1.5vw,1.3rem);color:#fff;opacity:0.8;padding:1vh;text-align:center}
+.grid{flex:1;display:grid;gap:1vw;padding:1vw;grid-template:1fr 1fr/1fr 1fr}
+@media(orientation:landscape){.grid{grid-template:1fr/1fr 1fr 1fr 1fr}}
+.block{display:flex;justify-content:center;align-items:center;text-align:center;border-radius:20px;font-weight:bold;font-size:clamp(1.2rem,2vw,1.5rem);color:#fff;background-size:cover;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;position:relative;padding:10px}
 .block-content{position:absolute;inset:0;display:flex;justify-content:center;align-items:center;padding:10px;text-align:center;word-break:break-word}
 .label{z-index:1}
-.accionable{color:white;font-family:'Poppins',sans-serif;font-size:clamp(1rem,1.8vw,1.4rem);font-weight:600;padding:14px;border-radius:18px;opacity:0;animation:aparecer .6s forwards;text-align:center;box-shadow:0 8px 30px rgba(0,0,0,.3)}
+.accionable{color:#fff;font-family:'Poppins',sans-serif;font-size:clamp(1rem,1.8vw,1.4rem);font-weight:600;padding:14px;border-radius:18px;opacity:0;animation:aparecer .6s forwards;text-align:center;box-shadow:0 8px 30px rgba(0,0,0,.3)}
 .portada-wrapper{width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:transparent;transform-style:preserve-3d;animation:flotarRespirarTilt 8s ease-in-out infinite}
 .portada-wrapper img{width:88%;height:auto;object-fit:cover;border-radius:22px;box-shadow:0 12px 30px rgba(0,0,0,.4);transition:transform .6s}
 .portada-wrapper img:hover{transform:scale(1.06) rotateY(6deg) rotateX(3deg)}
-.footer{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:1vh;min-height:110px}
-.shock{background:linear-gradient(135deg,#ff0080,#ff8c00,#00f2fe);color:white;font-weight:bold;border:none;border-radius:30px;padding:14px 24px;margin-top:8px;font-size:clamp(1rem,2vw,1.4rem);cursor:pointer;box-shadow:0 0 18px rgba(255,105,180,.6);animation:pulse 2s infinite;max-width:90%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+.footer{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:1vh;min-height:100px}
+.shock{background:linear-gradient(135deg,#ff0080,#ff8c00,#00f2fe);color:#fff;font-weight:bold;border:none;border-radius:30px;padding:14px 24px;margin-top:8px;font-size:clamp(1rem,2vw,1.4rem);cursor:pointer;box-shadow:0 0 18px rgba(255,105,180,.6);animation:pulse 2s infinite;max-width:90%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
 .counter{font-size:clamp(0.9rem,1.5vw,1.2rem);color:#fff;opacity:0.8;margin-top:5px}
-.final-message{color:white;font-size:clamp(1.1rem,2vw,1.5rem);text-align:center;opacity:0;animation:fadeIn 2s forwards;margin-top:8px;font-family:'Poppins',sans-serif}
+.final-message{color:#fff;font-size:clamp(1.1rem,2vw,1.5rem);text-align:center;opacity:0;animation:fadeIn 2s forwards;margin-top:8px;font-family:'Poppins',sans-serif}
 .trigguiletras{height:24px;opacity:.9;margin-top:6px;transition:opacity .4s}
 .hidden{display:none!important}
 .bg1{background:linear-gradient(135deg,#ff416c,#ff4b2b)}
@@ -40,12 +40,12 @@ body.dark{background:#000}
 
 <body>
 <div class="main">
-  <div class="header-message">¿Dónde se esconde el próximo universo? 📚</div>
+  <div class="header-message">¿Dónde está el libro físico? 📚</div>
   <div class="grid" id="gridContainer"></div>
   <div class="footer">
     <button class="shock hidden" id="shockBtn">📖 ¡Chócalas si abriste un libro físico!</button>
-    <div class="counter hidden" id="contador">📚 345 lectores reales abrieron un libro hoy</div>
-    <div class="final-message hidden" id="mensajeFinal">📚 Cada página que sostienes abre un nuevo mundo real. ✨</div>
+    <div class="counter hidden" id="contador">📚 345 lectores reales abrieron un libro</div>
+    <div class="final-message hidden" id="mensajeFinal">✨ Cada página física que abres transforma tu mente. 📚</div>
     <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui">
   </div>
 </div>
@@ -53,10 +53,10 @@ body.dark{background:#000}
 <script>
 const $=id=>document.getElementById(id),
 libros=[
-{palabras:["Adaptabilidad","Resiliencia","Mentalidad","Estrategia"],frases:["🌊 Aprende a moverte con flexibilidad.","🛡️ Construye fortaleza emocional.","🧠 Evoluciona tu mente.","📈 Aplica tácticas inteligentes."],portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1642726660i/60171734.jpg",fondo:"#140038"},
-{palabras:["Duda","Replantea","Actualiza","Expande"],frases:["🔍 Transforma la duda en oportunidad.","🧭 Replantea certezas dormidas.","♻️ Actualiza mapas internos.","🚀 Expande tus límites personales."],portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1602574232i/55539565.jpg",fondo:"#001a33"},
-{palabras:["Construcción","Innovación","Acción","Empoderamiento"],frases:["🏗️ Lleva ideas a acción real.","🎨 Crea realidades inspiradoras.","🚶‍♂️ Empieza ahora, ajusta después.","🌟 Recupera el control personal."],portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1662270336i/62237986.jpg",fondo:"#33001a"},
-{palabras:["Disciplina","Excelencia","Ambición","Liderazgo"],frases:["🏹 Domina la constancia diaria.","👑 Persigue excelencia silenciosa.","🚀 Deja que tu ambición crezca.","🧭 Lidera con autenticidad profunda."],portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1546097703i/76865.jpg",fondo:"#003300"}
+{palabras:["Adaptabilidad","Resiliencia","Mentalidad","Estrategia"],frases:["🌊 Aprende a moverte flexible.","🛡️ Fortalece emociones frente a cambios.","🧠 Evoluciona tu forma de pensar.","📈 Aplica estrategias efectivas."],portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1642726660i/60171734.jpg",fondo:"#140038"},
+{palabras:["Duda","Replantea","Actualiza","Expande"],frases:["🔍 Convierte duda en motor.","🧭 Cuestiona mejor tus certezas.","♻️ Renueva tus creencias.","🚀 Amplía horizontes internos."],portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1602574232i/55539565.jpg",fondo:"#001a33"},
+{palabras:["Construcción","Innovación","Acción","Empoderamiento"],frases:["🏗️ Materializa ideas concretas.","🎨 Crea caminos nuevos.","🚶‍♂️ Actúa antes que planear.","🌟 Recupera tu poder creador."],portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1662270336i/62237986.jpg",fondo:"#33001a"},
+{palabras:["Disciplina","Excelencia","Ambición","Liderazgo"],frases:["🏹 Constancia diaria inquebrantable.","👑 Persigue estándares altos.","🚀 Deja crecer tu ambición.","🧭 Lidera desde tu esencia."],portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1546097703i/76865.jpg",fondo:"#003300"}
 ];
 let libroActual,bloquePortada,revelado=false,count=345;
 
@@ -94,11 +94,11 @@ function revelarTodo(){
   revelado=true;
 }
 
-$("shockBtn").onclick=()=>{ 
+$("shockBtn").onclick=()=>{
   $("shockBtn").classList.add("hidden");
   $("mensajeFinal").classList.remove("hidden");
   $("contador").classList.remove("hidden");
-  $("contador").innerText=`📚 ${++count} lectores reales abrieron un libro hoy`;
+  $("contador").innerText=`📚 ${++count} lectores reales abrieron un libro`;
 };
 
 iniciarJuego();
